# docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/index": {
+        "/user": {
             "get": {
                 "tags": [
                     "Index"
@@ -29,42 +29,42 @@
                         "type": "string",
                         "description": "name",
                         "name": "name",
-                        "in": "query",
+                        "in": "formData",
                         "required": true
                     },
                     {
                         "type": "string",
                         "description": "password",
                         "name": "password",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "repassword",
-                        "name": "repassword",
-                        "in": "query",
+                        "in": "formData",
                         "required": true
                     },
                     {
                         "type": "string",
                         "description": "phone",
                         "name": "phone",
-                        "in": "query",
+                        "in": "formData",
                         "required": true
                     },
                     {
                         "type": "string",
                         "description": "email",
                         "name": "email",
-                        "in": "query",
+                        "in": "formData",
                         "required": true
                     },
                     {
                         "type": "string",
                         "description": "age",
                         "name": "age",
-                        "in": "query",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "test",
+                        "name": "test",
+                        "in": "formData",
                         "required": true
                     },
                     {
@@ -76,7 +76,7 @@
                         "type": "string",
                         "description": "sex",
                         "name": "sex",
-                        "in": "query",
+                        "in": "formData",
                         "required": true
                     }
                 ],
@@ -100,7 +100,7 @@
                         "type": "string",
                         "description": "id",
                         "name": "id",
-                        "in": "query",
+                        "in": "formData",
                         "required": true
                     }
                 ],
@@ -121,18 +121,13 @@
                 ],
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "name",
-                        "name": "name",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "password",
-                        "name": "password",
-                        "in": "query",
-                        "required": true
+                        "description": "FindUserByNameDto object",
+                        "name": "requestBody",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/service.FindUserByNameDto"
+                        }
                     }
                 ],
                 "responses": {
@@ -149,6 +144,30 @@
             "get": {
                 "tags": [
                     "GetUserData"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "code\",\"message\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/search-friend": {
+            "get": {
+                "tags": [
+                    "SearchFriend"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
                 ],
                 "responses": {
                     "200": {
@@ -209,6 +228,19 @@
                             "type": "string"
                         }
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "service.FindUserByNameDto": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
                 }
             }
         }
